mdbx-sys/libmdbx/mdbx.h

typedef DWORD mdbx_pid_t;
typedef DWORD mdbx_tid_t;
typedef pid_t mdbx_pid_t;
typedef pthread_t mdbx_tid_t;
#define bool _Bool
typedef struct MDBX_env MDBX_env;
struct MDBX_env;
typedef struct MDBX_txn MDBX_txn;
struct MDBX_txn;
typedef uint32_t MDBX_dbi;
typedef struct MDBX_cursor MDBX_cursor;
struct MDBX_cursor;
struct iovec {
  void *iov_base; 
  size_t iov_len; 
};
struct MDBX_val {
  void *iov_base; 
  size_t iov_len; 
};
typedef struct MDBX_val MDBX_val;
typedef struct iovec MDBX_val;
enum MDBX_env_flags_t {
  MDBX_ENV_DEFAULTS = 0,
  MDBX_VALIDATION = UINT32_C(0x00002000),
  MDBX_NOSUBDIR = UINT32_C(0x4000),
  MDBX_RDONLY = UINT32_C(0x20000),
  MDBX_EXCLUSIVE = UINT32_C(0x400000),
  MDBX_ACCEDE = UINT32_C(0x40000000),
  MDBX_WRITEMAP = UINT32_C(0x80000),
  MDBX_NOTLS = UINT32_C(0x200000),
  MDBX_NORDAHEAD = UINT32_C(0x800000),
  MDBX_NOMEMINIT = UINT32_C(0x1000000),
  MDBX_COALESCE = UINT32_C(0x2000000),
  MDBX_LIFORECLAIM = UINT32_C(0x4000000),
  MDBX_PAGEPERTURB = UINT32_C(0x8000000),
  MDBX_SYNC_DURABLE = 0,
  MDBX_NOMETASYNC = UINT32_C(0x40000),
  MDBX_SAFE_NOSYNC = UINT32_C(0x10000),
  MDBX_MAPASYNC = MDBX_SAFE_NOSYNC,
  MDBX_UTTERLY_NOSYNC = MDBX_SAFE_NOSYNC | UINT32_C(0x100000),
};
enum MDBX_db_flags_t {
  MDBX_DB_DEFAULTS = 0,
  MDBX_REVERSEKEY = UINT32_C(0x02),
  MDBX_DUPSORT = UINT32_C(0x04),
  MDBX_INTEGERKEY = UINT32_C(0x08),
  MDBX_DUPFIXED = UINT32_C(0x10),
  MDBX_INTEGERDUP = UINT32_C(0x20),
  MDBX_REVERSEDUP = UINT32_C(0x40),
  MDBX_CREATE = UINT32_C(0x40000),
  MDBX_DB_ACCEDE = MDBX_ACCEDE
};
typedef enum MDBX_db_flags_t MDBX_db_flags_t;
enum MDBX_put_flags_t {
  MDBX_UPSERT = 0,
  MDBX_NOOVERWRITE = UINT32_C(0x10),
  MDBX_NODUPDATA = UINT32_C(0x20),
  MDBX_CURRENT = UINT32_C(0x40),
  MDBX_ALLDUPS = UINT32_C(0x80),
  MDBX_RESERVE = UINT32_C(0x10000),
  MDBX_APPEND = UINT32_C(0x20000),
  MDBX_APPENDDUP = UINT32_C(0x40000),
  MDBX_MULTIPLE = UINT32_C(0x80000)
};
typedef enum MDBX_put_flags_t MDBX_put_flags_t;
enum MDBX_cursor_op {
  MDBX_FIRST,
  MDBX_FIRST_DUP,
  MDBX_GET_BOTH,
  MDBX_GET_BOTH_RANGE,
  MDBX_GET_CURRENT,
  MDBX_GET_MULTIPLE,
  MDBX_LAST,
  MDBX_LAST_DUP,
  MDBX_NEXT,
  MDBX_NEXT_DUP,
  MDBX_NEXT_MULTIPLE,
  MDBX_NEXT_NODUP,
  MDBX_PREV,
  MDBX_PREV_DUP,
  MDBX_PREV_NODUP,
  MDBX_SET,
  MDBX_SET_KEY,
  MDBX_SET_RANGE,
  MDBX_PREV_MULTIPLE,
  MDBX_SET_LOWERBOUND,
  MDBX_SET_UPPERBOUND
};
typedef enum MDBX_cursor_op MDBX_cursor_op;
enum MDBX_error_t {
  MDBX_SUCCESS = 0,
  MDBX_RESULT_FALSE = MDBX_SUCCESS,
  MDBX_RESULT_TRUE = -1,
  MDBX_KEYEXIST = -30799,
  MDBX_FIRST_LMDB_ERRCODE = MDBX_KEYEXIST,
  MDBX_NOTFOUND = -30798,
  MDBX_PAGE_NOTFOUND = -30797,
  MDBX_CORRUPTED = -30796,
  MDBX_PANIC = -30795,
  MDBX_VERSION_MISMATCH = -30794,
  MDBX_INVALID = -30793,
  MDBX_MAP_FULL = -30792,
  MDBX_DBS_FULL = -30791,
  MDBX_READERS_FULL = -30790,
  MDBX_TXN_FULL = -30788,
  MDBX_CURSOR_FULL = -30787,
  MDBX_PAGE_FULL = -30786,
  MDBX_UNABLE_EXTEND_MAPSIZE = -30785,
  MDBX_INCOMPATIBLE = -30784,
  MDBX_BAD_RSLOT = -30783,
  MDBX_BAD_TXN = -30782,
  MDBX_BAD_VALSIZE = -30781,
  MDBX_BAD_DBI = -30780,
  MDBX_PROBLEM = -30779,
  MDBX_LAST_LMDB_ERRCODE = MDBX_PROBLEM,
  MDBX_BUSY = -30778,
  MDBX_FIRST_ADDED_ERRCODE = MDBX_BUSY,
  MDBX_EMULTIVAL = -30421,
  MDBX_EBADSIGN = -30420,
  MDBX_WANNA_RECOVERY = -30419,
  MDBX_EKEYMISMATCH = -30418,
  MDBX_TOO_LARGE = -30417,
  MDBX_THREAD_MISMATCH = -30416,
  MDBX_TXN_OVERLAPPING = -30415,
  MDBX_BACKLOG_DEPLETED = -30414,
  MDBX_DUPLICATED_CLK = -30413,
  MDBX_LAST_ADDED_ERRCODE = MDBX_DUPLICATED_CLK,
#if defined(_WIN32) || defined(_WIN64)
  MDBX_ENODATA = ERROR_HANDLE_EOF,
  MDBX_EINVAL = ERROR_INVALID_PARAMETER,
  MDBX_EACCESS = ERROR_ACCESS_DENIED,
  MDBX_ENOMEM = ERROR_OUTOFMEMORY,
  MDBX_EROFS = ERROR_FILE_READ_ONLY,
  MDBX_ENOSYS = ERROR_NOT_SUPPORTED,
  MDBX_EIO = ERROR_WRITE_FAULT,
  MDBX_EPERM = ERROR_INVALID_FUNCTION,
  MDBX_EINTR = ERROR_CANCELLED,
  MDBX_ENOFILE = ERROR_FILE_NOT_FOUND,
  MDBX_EREMOTE = ERROR_REMOTE_STORAGE_MEDIA_ERROR
#else 
#ifdef ENODATA
  MDBX_ENODATA = ENODATA,
#else
  MDBX_ENODATA = 9919 ,
#endif 
  MDBX_EINVAL = EINVAL,
  MDBX_EACCESS = EACCES,
  MDBX_ENOMEM = ENOMEM,
  MDBX_EROFS = EROFS,
  MDBX_ENOSYS = ENOSYS,
  MDBX_EIO = EIO,
  MDBX_EPERM = EPERM,
  MDBX_EINTR = EINTR,
  MDBX_ENOFILE = ENOENT,
  MDBX_EREMOTE = ENOTBLK
#endif 
};
typedef enum MDBX_error_t MDBX_error_t;
typedef int(MDBX_cmp_func)(const MDBX_val *a,
                           const MDBX_val *b) MDBX_CXX17_NOEXCEPT;
LIBMDBX_API int mdbx_cursor_put(MDBX_cursor *cursor, const MDBX_val *key,
                                MDBX_val *data, MDBX_put_flags_t flags);
LIBMDBX_API int mdbx_cursor_del(MDBX_cursor *cursor, MDBX_put_flags_t flags);
LIBMDBX_API int mdbx_cursor_count(const MDBX_cursor *cursor, size_t *count);
MDBX_NOTHROW_PURE_FUNCTION LIBMDBX_API int
mdbx_cursor_eof(const MDBX_cursor *cursor);
MDBX_NOTHROW_PURE_FUNCTION LIBMDBX_API int
mdbx_cursor_on_first(const MDBX_cursor *cursor);
MDBX_NOTHROW_PURE_FUNCTION LIBMDBX_API int
mdbx_cursor_on_last(const MDBX_cursor *cursor);
LIBMDBX_API int mdbx_estimate_distance(const MDBX_cursor *first,
                                       const MDBX_cursor *last,
                                       ptrdiff_t *distance_items);
LIBMDBX_API int mdbx_estimate_move(const MDBX_cursor *cursor, MDBX_val *key,
                                   MDBX_val *data, MDBX_cursor_op move_op,
                                   ptrdiff_t *distance_items);
LIBMDBX_API int mdbx_estimate_range(const MDBX_txn *txn, MDBX_dbi dbi,
                                    const MDBX_val *begin_key,
                                    const MDBX_val *begin_data,
                                    const MDBX_val *end_key,
                                    const MDBX_val *end_data,
                                    ptrdiff_t *distance_items);
MDBX_NOTHROW_PURE_FUNCTION LIBMDBX_API int mdbx_is_dirty(const MDBX_txn *txn,
                                                         const void *ptr);
LIBMDBX_API int mdbx_dbi_sequence(MDBX_txn *txn, MDBX_dbi dbi, uint64_t *result,
                                  uint64_t increment);
MDBX_NOTHROW_PURE_FUNCTION LIBMDBX_API int mdbx_cmp(const MDBX_txn *txn,
                                                    MDBX_dbi dbi,
                                                    const MDBX_val *a,
                                                    const MDBX_val *b);
MDBX_NOTHROW_CONST_FUNCTION LIBMDBX_API MDBX_cmp_func *
mdbx_get_keycmp(MDBX_db_flags_t flags);
MDBX_NOTHROW_PURE_FUNCTION LIBMDBX_API int mdbx_dcmp(const MDBX_txn *txn,
                                                     MDBX_dbi dbi,
                                                     const MDBX_val *a,
                                                     const MDBX_val *b);
MDBX_NOTHROW_CONST_FUNCTION LIBMDBX_API MDBX_cmp_func *
mdbx_get_datacmp(MDBX_db_flags_t flags);
typedef int(MDBX_reader_list_func)(void *ctx, int num, int slot, mdbx_pid_t pid,
                                   mdbx_tid_t thread, uint64_t txnid,
                                   uint64_t lag, size_t bytes_used,
                                   size_t bytes_retained) MDBX_CXX17_NOEXCEPT;
LIBMDBX_API int mdbx_reader_list(const MDBX_env *env,
                                 MDBX_reader_list_func *func, void *ctx);
LIBMDBX_API int mdbx_reader_check(MDBX_env *env, int *dead);
MDBX_DEPRECATED LIBMDBX_API int mdbx_txn_straggler(const MDBX_txn *txn,
                                                   int *percent);
LIBMDBX_API int mdbx_thread_register(const MDBX_env *env);
LIBMDBX_API int mdbx_thread_unregister(const MDBX_env *env);
typedef int(MDBX_hsr_func)(const MDBX_env *env, const MDBX_txn *txn,
                           mdbx_pid_t pid, mdbx_tid_t tid, uint64_t laggard,
                           unsigned gap, size_t space,
                           int retry) MDBX_CXX17_NOEXCEPT;
LIBMDBX_API int mdbx_env_set_hsr(MDBX_env *env, MDBX_hsr_func *hsr_callback);
MDBX_NOTHROW_PURE_FUNCTION LIBMDBX_API MDBX_hsr_func *
mdbx_env_get_hsr(const MDBX_env *env);
enum MDBX_page_type_t {
  MDBX_page_broken,
  MDBX_page_meta,
  MDBX_page_large,
  MDBX_page_branch,
  MDBX_page_leaf,
  MDBX_page_dupfixed_leaf,
  MDBX_subpage_leaf,
  MDBX_subpage_dupfixed_leaf,
  MDBX_subpage_broken,
};
typedef enum MDBX_page_type_t MDBX_page_type_t;
typedef int
MDBX_pgvisitor_func(const uint64_t pgno, const unsigned number, void *const ctx,
                    const int deep, const MDBX_val *dbi_name,
                    const size_t page_size, const MDBX_page_type_t type,
                    const MDBX_error_t err, const size_t nentries,
                    const size_t payload_bytes, const size_t header_bytes,
                    const size_t unused_bytes) MDBX_CXX17_NOEXCEPT;
LIBMDBX_API int mdbx_env_pgwalk(MDBX_txn *txn, MDBX_pgvisitor_func *visitor,
                                void *ctx, bool dont_check_keys_ordering);
LIBMDBX_API int mdbx_env_open_for_recovery(MDBX_env *env, const char *pathname,
                                           unsigned target_meta,
                                           bool writeable);
LIBMDBX_API int mdbx_env_turn_for_recovery(MDBX_env *env, unsigned target_meta);