mdbx-sys/src/bindings.rs

extern "C" {
    pub fn mdbx_cursor_put(
        cursor: *mut MDBX_cursor,
        key: *const MDBX_val,
        data: *mut MDBX_val,
        flags: MDBX_put_flags_t,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_cursor_del(cursor: *mut MDBX_cursor, flags: MDBX_put_flags_t) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_cursor_count(cursor: *const MDBX_cursor, pcount: *mut usize) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_cursor_eof(cursor: *const MDBX_cursor) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_cursor_on_first(cursor: *const MDBX_cursor) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_cursor_on_last(cursor: *const MDBX_cursor) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_estimate_distance(
        first: *const MDBX_cursor,
        last: *const MDBX_cursor,
        distance_items: *mut isize,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_estimate_move(
        cursor: *const MDBX_cursor,
        key: *mut MDBX_val,
        data: *mut MDBX_val,
        move_op: MDBX_cursor_op,
        distance_items: *mut isize,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_estimate_range(
        txn: *mut MDBX_txn,
        dbi: MDBX_dbi,
        begin_key: *mut MDBX_val,
        begin_data: *mut MDBX_val,
        end_key: *mut MDBX_val,
        end_data: *mut MDBX_val,
        distance_items: *mut isize,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_is_dirty(txn: *const MDBX_txn, ptr: *const ::libc::c_void) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_dbi_sequence(
        txn: *mut MDBX_txn,
        dbi: MDBX_dbi,
        result: *mut u64,
        increment: u64,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_cmp(
        txn: *const MDBX_txn,
        dbi: MDBX_dbi,
        a: *const MDBX_val,
        b: *const MDBX_val,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_get_keycmp(flags: MDBX_db_flags_t) -> MDBX_cmp_func;
}
extern "C" {
    pub fn mdbx_dcmp(
        txn: *const MDBX_txn,
        dbi: MDBX_dbi,
        a: *const MDBX_val,
        b: *const MDBX_val,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_get_datacmp(flags: MDBX_db_flags_t) -> MDBX_cmp_func;
}
pub type MDBX_reader_list_func = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut ::libc::c_void,
        num: ::libc::c_int,
        slot: ::libc::c_int,
        pid: mdbx_pid_t,
        thread: mdbx_tid_t,
        txnid: u64,
        lag: u64,
        bytes_used: usize,
        bytes_retained: usize,
    ) -> ::libc::c_int,
>;
extern "C" {
    pub fn mdbx_reader_list(
        env: *const MDBX_env,
        func: MDBX_reader_list_func,
        ctx: *mut ::libc::c_void,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_reader_check(env: *mut MDBX_env, dead: *mut ::libc::c_int) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_txn_straggler(txn: *const MDBX_txn, percent: *mut ::libc::c_int) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_thread_register(env: *const MDBX_env) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_thread_unregister(env: *const MDBX_env) -> ::libc::c_int;
}
pub type MDBX_hsr_func = ::std::option::Option<
    unsafe extern "C" fn(
        env: *const MDBX_env,
        txn: *const MDBX_txn,
        pid: mdbx_pid_t,
        tid: mdbx_tid_t,
        laggard: u64,
        gap: ::libc::c_uint,
        space: usize,
        retry: ::libc::c_int,
    ) -> ::libc::c_int,
>;
extern "C" {
    pub fn mdbx_env_set_hsr(env: *mut MDBX_env, hsr_callback: MDBX_hsr_func) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_env_get_hsr(env: *const MDBX_env) -> MDBX_hsr_func;
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum MDBX_page_type_t {
    MDBX_page_broken = 0,
    MDBX_page_meta = 1,
    MDBX_page_large = 2,
    MDBX_page_branch = 3,
    MDBX_page_leaf = 4,
    MDBX_page_dupfixed_leaf = 5,
    MDBX_subpage_leaf = 6,
    MDBX_subpage_dupfixed_leaf = 7,
    MDBX_subpage_broken = 8,
}
pub type MDBX_pgvisitor_func = ::std::option::Option<
    unsafe extern "C" fn(
        pgno: u64,
        number: ::libc::c_uint,
        ctx: *mut ::libc::c_void,
        deep: ::libc::c_int,
        dbi: *const ::libc::c_char,
        page_size: usize,
        type_: MDBX_page_type_t,
        err: MDBX_error_t,
        nentries: usize,
        payload_bytes: usize,
        header_bytes: usize,
        unused_bytes: usize,
    ) -> ::libc::c_int,
>;
extern "C" {
    pub fn mdbx_env_pgwalk(
        txn: *mut MDBX_txn,
        visitor: MDBX_pgvisitor_func,
        ctx: *mut ::libc::c_void,
        dont_check_keys_ordering: bool,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_env_open_for_recovery(
        env: *mut MDBX_env,
        pathname: *const ::libc::c_char,
        target_meta: ::libc::c_uint,
        writeable: bool,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_env_turn_for_recovery(
        env: *mut MDBX_env,
        target_meta: ::libc::c_uint,
    ) -> ::libc::c_int;
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::libc::c_uint,
    pub fp_offset: ::libc::c_uint,
    pub overflow_arg_area: *mut ::libc::c_void,
    pub reg_save_area: *mut ::libc::c_void,
}
